pushing v2 changes for reduced caching

--- a/predictions.ipynb
+++ b/predictions.ipynb
@@ -18,13 +18,12 @@
     "from dask_kubernetes import KubeCluster\n",
     "from joblib import Memory\n",
     "from dask.distributed import Client\n",
-    "from calculator_upload import predict_E\n",
+    "from calculator_upload2 import predict_E\n",
     "from ocpmodels.models.dimenet_plus_plus import DimeNetPlusPlusWrap\n",
     "\n",
     "import os\n",
     "\n",
-    "from enumeration_helper_script import enumerate_surface_wrap, enumerate_adslabs_wrap, grab_surf_obj\n",
-    "from pymatgen.io.ase import AseAtomsAdaptor\n",
+    "from enumeration_helper_script2 import enumerate_surface_wrap\n",
     "from tqdm import tqdm\n",
     "from ocdata.adsorbates import Adsorbate\n",
     "from ocdata.bulk_obj import Bulk\n",
@@ -67,25 +66,25 @@
     "# INPUTS!!\n",
     "# ----------------------------------------------------------------------------\n",
     "# Bulk inputs\n",
-    "mpids_to_slabs = False # True = use mpid_list to generate aslabs, False = use element list and num_of_els\n",
+    "mpids_to_slabs = True # True = use mpid_list to generate aslabs, False = use element list and num_of_els\n",
     "elements_to_include = [29]# list of desired atomic numbers\n",
-    "mpid_list = ['mp-30']\n",
+    "mpid_list = ['mp-126']#,'mp-126','mp-74', 'mp-101', 'mp-124']\n",
     "num_of_els = [1] # [1,2] = unary and binary\n",
     "mpids_to_exclude = ['mp-672234', 'mp-632250', 'mp-754514', 'mp-570747', 'mp-12103', 'mp-25', \n",
     "                    'mp-672233', 'mp-568584', 'mp-154', 'mp-999498', 'mp-14', 'mp-96', 'mp-1080711', \n",
     "                    'mp-1008394', 'mp-22848', 'mp-160', 'mp-1198724'] #these are odd and cause failures\n",
     "\n",
     "# Adsorbate inputs\n",
-    "adsorbates_smile_list = ['*O']\n",
+    "adsorbates_smile_list = ['*H']\n",
     "\n",
     "# File paths\n",
     "config_path = '/home/jovyan/shared-scratch/Brook/ocpcalc_config.yml'\n",
-    "worker_spec_path = '/home/jovyan/shared-scratch/Brook/worker-spec-mount.yml'\n",
+    "worker_spec_path = '/home/jovyan/shared-scratch/Brook/worker-spec.yml'\n",
     "your_shared_scratch_path = '/home/jovyan/shared-scratch/Brook' # this will be used to create a cache dir in your folder\n",
     "\n",
-    "# Number of workers\n",
-    "num_workers = 3 # should be scaled with workload. Use 1 to troubleshoot. 10 is a good place to start\n",
-    "\n",
+    "# Other\n",
+    "num_workers = 2 # should be scaled with workload. Use 1 to troubleshoot. 10 is a good place to start\n",
+    "max_size = 100 # This is the maximum number of atoms you will allow in your slabs. Any greater will return size = Number rather than a prediction.\n",
     "# -----------------------------------------------------------------------------\n",
     "\n",
     "\n",
@@ -117,7 +116,7 @@
     "# -----------------------------------------------------------------------------\n",
     "# Set the up a kube dask cluster \n",
     "cluster = KubeCluster(worker_spec_path, deploy_mode='local')\n",
-    "cluster.scale(num_workers)\n",
+    "cluster.adapt(minimum=2, maximum = num_workers, interval = '30000 ms')\n",
     "client = Client(cluster)\n",
     "\n",
     "def _worker_upload(dask_worker, *, data, fname):\n",
@@ -129,7 +128,7 @@
     "    load=True)\n",
     "\n",
     "## Upload code to every worker as they start/restart\n",
-    "fname_ = ['enumeration_helper_script.py', 'calculator_upload.py',]\n",
+    "fname_ = ['enumeration_helper_script2.py', 'calculator_upload2.py']\n",
     "for fname in fname_:\n",
     "    with open(fname, 'rb') as f:\n",
     "        data = f.read()\n",
@@ -140,8 +139,10 @@
     "        )\n",
     "\n",
     "# Set up the cache directory - this will also be the local directory on each worker that will store cached results\n",
-    "location = your_shared_scratch_path + '/cachedir_'+cp_fn\n",
-    "memory = Memory(location,verbose=1)\n",
+    "location_preds = your_shared_scratch_path + '/cachedir_predictions_mod_testing'+cp_fn\n",
+    "location_slabs = your_shared_scratch_path + '/cachedir_slabs_testing'+cp_fn\n",
+    "memory_preds = Memory(location_preds,verbose=1)\n",
+    "memory_slabs = Memory(location_slabs,verbose=1)\n",
     "# -----------------------------------------------------------------------------"
    ]
   },
@@ -178,11 +179,12 @@
     "ads_idx = [key for key in inv_index if inv_index[key][1] in adsorbates_smile_list]\n",
     "adsorbates_obj = [Adsorbate(ADSORBATE_PKL, specified_index = idx) for idx in ads_idx]\n",
     "\n",
+    "\n",
     "#create a dask bag of adsorbates\n",
     "adsorbate_bag = db.from_sequence(adsorbates_obj)\n",
     "\n",
     "#create a dask bag of bulks\n",
-    "bulk_bag = db.from_sequence(bulks, npartitions = len(bulks))"
+    "bulk_bag = db.from_sequence(bulks)"
    ]
   },
   {
@@ -192,67 +194,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# calculate the size for repartitioning the data (better work distribution)\n",
-    "nsize1 = 200 * num_workers\n",
-    "\n",
     "# generate the adslab mappings\n",
-    "surfaces_bag = bulk_bag.map(memory.cache(enumerate_surface_wrap)).flatten()\n",
-    "surface_obj = surfaces_bag.map(memory.cache(grab_surf_obj)).repartition(npartitions=nsize1)\n",
-    "surface_ads_combos = surface_obj.product(adsorbate_bag)\n",
-    "adslab_bag = surface_ads_combos.map(memory.cache(enumerate_adslabs_wrap)).flatten()\n",
-    "\n",
+    "surfaces_bag = bulk_bag.map(memory_slabs.cache(enumerate_surface_wrap)).flatten()\n",
+    "surface_ads_combos = surfaces_bag.product(adsorbate_bag).repartition(npartitions=num_workers*20).compute()\n",
+    "surfaces = db.from_sequence(surface_ads_combos, npartitions=num_workers*20)\n",
     "# generate prediction mappings\n",
-    "predictions_bag = adslab_bag.map(memory.cache(predict_E))\n",
+    "predictions_bag = surfaces.map(memory_preds.cache(predict_E), max_size)\n",
     "\n",
     "# execute operations (go to all work)\n",
-    "predictions = predictions_bag.persist() # change to .compute() to push to local RAM"
+    "predictions = predictions_bag.compute() # change to .compute() to push to local RAM"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7aa99e0a-78c1-4bf1-9e59-751ef9ffc197",
+   "id": "dcfe3e7c-b9ed-4ddb-a1f3-2e20804ab140",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dask.dataframe as dd\n",
-    "import numpy as np"
+    "predictions"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2d28a23-d68c-4e69-8952-b8201e4f5bbe",
+   "id": "aa546836-8e17-4de0-b66b-b5e119a44b28",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# create dask df of the data\n",
-    "df = predictions.to_dataframe(meta = {'mpid':str, 'surf_info': str, 'adsorbate':str, 'energy': float}) \n",
-    "\n",
-    "# push dask df to local RAM only keeping min E per surface\n",
-    "df = df.groupby(by = ['mpid','surf_info','adsorbate']).energy.min().compute() \n",
-    "\n",
-    "# convert data series to a df\n",
-    "dff = df.to_frame()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8dc16666-6505-4d03-b7f1-6e32ddd7af72",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# aggregate to bulk level\n",
-    "df_bulk = dff.groupby(by = ['mpid','adsorbate']).agg({'energy': ['mean', np.std, 'min']})\n",
-    "#flatten column names\n",
-    "df_bulk.columns = [''.join(col).strip() for col in df_bulk.columns.values]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -266,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
