--- a/predictions.ipynb
+++ b/predictions.ipynb
@@ -18,12 +18,12 @@
     "from dask_kubernetes import KubeCluster\n",
     "from joblib import Memory\n",
     "from dask.distributed import Client\n",
-    "from calculator_upload2 import predict_E\n",
+    "from calculator_upload import predict_E\n",
     "from ocpmodels.models.dimenet_plus_plus import DimeNetPlusPlusWrap\n",
     "\n",
     "import os\n",
     "\n",
-    "from enumeration_helper_script2 import enumerate_surface_wrap\n",
+    "from enumeration_helper_script import enumerate_surface_wrap\n",
     "from tqdm import tqdm\n",
     "from ocdata.adsorbates import Adsorbate\n",
     "from ocdata.bulk_obj import Bulk\n",
@@ -128,7 +128,7 @@
     "    load=True)\n",
     "\n",
     "## Upload code to every worker as they start/restart\n",
-    "fname_ = ['enumeration_helper_script2.py', 'calculator_upload2.py']\n",
+    "fname_ = ['enumeration_helper_script.py', 'calculator_upload.py']\n",
     "for fname in fname_:\n",
     "    with open(fname, 'rb') as f:\n",
     "        data = f.read()\n",
